# gliner-guard-serve

./: .env.example  AGENTS.md  Makefile  README.md  docker-compose.yml
docs/: 2026-04-12-label-scaling-biencoder.md  a100-ray-serve-uni-results-2026-04-29.md  benchmark-infra-design.md  litserve-baseline.md  phase2-agent-prompt.md  presentation-label-scaling.html  ray-serve-a100-4worker-config.md  ray-serve-experiment-plan.md  ray-serve-experiment-report.md  ray-serve-grpc-dev.md  ray-serve-rest-nobatch.md  session-2026-04-05-phase0-phase1-day3.md  session-2026-04-05-phase0-phase1.md
litserve-baseline/: Dockerfile  main.py  pyproject.toml
ray-serve/: Dockerfile  pyproject.toml  serve_app.py  serve_app_grpc.py
results/: gpu-ray-rest-B1-uni-prompts-run1.csv  gpu-ray-rest-B2-uni-prompts-run1.csv  gpu-ray-rest-B3-uni-prompts-run1.csv  gpu-ray-rest-B4-uni-prompts-run1.csv  gpu-ray-rest-nobatch-bi-prompts-run1.csv  gpu-ray-rest-nobatch-bi-prompts-run2.csv  gpu-ray-rest-nobatch-bi-prompts-run3.csv  gpu-ray-rest-nobatch-uni-prompts-run1.csv  gpu-ray-rest-nobatch-uni-prompts-run2.csv  gpu-ray-rest-nobatch-uni-prompts-run3.csv  ray-grpc-nobatch-uni-prompts-run1.html  ray-grpc-nobatch-uni-prompts-run1_stats.csv  ray-rest-B1-uni-prompts-run1.html  ray-rest-B1-uni-prompts-run1_stats.csv  ray-rest-B2-uni-prompts-run1.html  ray-rest-B2-uni-prompts-run1_stats.csv  ray-rest-B3-uni-prompts-run1.html  ray-rest-B3-uni-prompts-run1_stats.csv  ray-rest-B4-uni-prompts-run1.html  ray-rest-B4-uni-prompts-run1_stats.csv  ray-rest-nobatch-bi-prompts-run1.html  (+11 more)
scripts/: run-batch-benchmarks.sh  (+4 more)
(+17 files in other folders)
