[project]
name = "gliner-guard-ray-serve"
version = "0.1.0"
description = "GLiNER Guard inference via Ray Serve"
requires-python = ">=3.12"
dependencies = [
    "ray[serve]>=2.46",
    "gliner2>=1.2.4",
    "torch==2.8.0",
    "transformers>=5.0.0",
    "grpcio>=1.71",
    "grpcio-tools>=1.71",
    "protobuf>=5.29",
    "pydantic>=2.0.0",
]
